--- a/index.html
+++ b/index.html
@@ -131,14 +131,8 @@
                 <li><a href="https://github.com/caiocall">Caio Calderari</a></li>
                 <li><a href="https://github.com/arcruiton">Mayank Gupta</a></li>
                 <li><a href="https://github.com/sagar-kalra">Sagar Kalra</a></li>
-
->
-
-
-
+                <li><a href="https://github.com/pangpond">Pangpond</a></li>
             </ol>
-
-
     </div>
     <!-- End of Oct' 17 Sign in -->
 
